# DSCProject

./: .gitignore  AlarmChangeLog.cpp  AlarmChangeLog.h  AlarmEngine.cpp  AlarmEngine.h  AlarmKpiMonitor.cpp  AlarmKpiMonitor.h  AuthManager.cpp  AuthManager.h  BaseGraphicsItem.cpp  BaseGraphicsItem.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DataBackupManager.h  DataEngine.cpp  DataEngine.h  DataLabelItem.cpp  DataLabelItem.h  DataParseThread.cpp  DataParseThread.h  DatabaseManager.cpp  DatabaseManager.h  DoubleBuffer.h  HistoryArchiveThread.cpp  HistoryArchiveThread.h  LogLevelSpec.h  MYDSCProject.cpp  MYDSCProject.h  MYDSCProject.qrc  MYDSCProject.ui  MYDSCProject.vcxproj  MYDSCProject.vcxproj.filters  ModbusComm.cpp  ModbusComm.h  ModbusManager.cpp  ModbusManager.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PidScene.cpp  (+29 more)
.claude/: settings.local.json
3pair/libmodbus-3.1.12/: CMakeLists.txt
3pair/libmodbus-3.1.12/src/: modbus-data.c  modbus-rtu.c  modbus-tcp.c  modbus.c
3pair/libmodbus-3.1.12/src/win32/: UpgradeLog.htm  config.h  modbus-9.sln  modbus.vcxproj
3pair/libmodbus-3.1.12/src/win32/x64/Debug/: modbus.dll.recipe  modbus.exp  modbus.ilk  modbus.lib  modbus.res  modbus.vcxproj.FileListAbsolute.txt
3pair/libmodbus-3.1.12/src/win32/x64/Debug/modbus.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  modbus.lastbuildstate  modbus.write.1u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
3pair/qcustomplot/: README.txt
app/: AppConfig.h  AppContext.h  ApplicationBuilder.h
application/: AlarmController.cpp  AlarmController.h  AuthController.cpp  AuthController.h  DataController.cpp  DataController.h
config/: app.json  scene.json  tags.json
data/: dcs.db-shm  dcs.db-wal
docs/: alarm_module_analysis.md  data_engine_analysis.md  database_schema.md  qt_technology_analysis.md  tag_config_analysis.md
domain/alarm/: AlarmChangeLog.cpp  AlarmChangeLog.h  AlarmEngine.cpp  AlarmEngine.h  AlarmEvent.h  AlarmKpiMonitor.cpp  AlarmKpiMonitor.h  AlarmStateMachine.h  ChatteringGuard.h  FloodDetector.h  ShelveManager.h  SuppressionEngine.h
domain/auth/: AuthManager.cpp  AuthManager.h  PasswordHasher.h  SessionManager.h  User.h
domain/common/: AlarmLimit.h  AlarmState.h  DataQuality.h
domain/tag/: DeadbandFilter.h  DeviationChecker.h  RateOfChangeChecker.h  TagInfo.h  TagManager.cpp  TagManager.h
infrastructure/config/: IConfigRepo.h  JsonConfigRepo.cpp  JsonConfigRepo.h
infrastructure/fieldbus/: IFieldbus.h  ModbusComm.cpp  ModbusComm.h  ModbusImpl.cpp  ModbusImpl.h  OpcUaImpl.h  SimulatorImpl.cpp  SimulatorImpl.h
infrastructure/logging/: ILogger.h  SpdlogAdapter.cpp  SpdlogAdapter.h
infrastructure/messaging/: DoubleBuffer.h  IMessageBus.h  LockFreeRingBuffer.h  RealtimeDb.h
infrastructure/monitoring/: PerformanceMonitor.h
infrastructure/persistence/: IAlarmRepo.h  IHistoryRepo.h  IOperationRepo.h  ITagRepo.h  IUserRepo.h
infrastructure/persistence/mysql/: AlarmMysqlRepo.cpp  AlarmMysqlRepo.h  ConnectionPool.cpp  ConnectionPool.h  HistoryMysqlRepo.cpp  HistoryMysqlRepo.h  OperationMysqlRepo.cpp  OperationMysqlRepo.h  TagMysqlRepo.cpp  TagMysqlRepo.h  UserMysqlRepo.cpp  UserMysqlRepo.h
infrastructure/persistence/sqlite/: AlarmSqliteRepo.cpp  AlarmSqliteRepo.h
infrastructure/threading/: ThreadGuard.h
pipeline/: DataParseThread.cpp  DataParseThread.h  DataPipeline.cpp  DataPipeline.h  HistorySampler.cpp  HistorySampler.h
presentation/: MainWindow.cpp  MainWindow.h  PidScene.cpp  PidScene.h  TagConfigDialog.cpp  TagConfigDialog.h  TrendWidget.cpp  TrendWidget.h
presentation/widgets/: BaseGraphicsItem.cpp  BaseGraphicsItem.h  DataLabelItem.cpp  DataLabelItem.h  PipeItem.cpp  PipeItem.h  PumpItem.cpp  PumpItem.h  TankItem.cpp  TankItem.h  ValveItem.cpp  ValveItem.h
tests/: CMakeLists.txt  TestAlarmEngine.cpp  TestAuthManager.cpp  TestDoubleBuffer.cpp  build_and_run.bat
